--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,6 +5,8 @@ description = "Add your description here"
 requires-python = ">=3.11"
 dependencies = [
     "codescan>=0.2.0",
+    "plotly>=5.24.1",
     "pygments>=2.18.0",
+    "radon>=6.0.1",
     "streamlit>=1.41.1",
 ]
