--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,8 +5,11 @@ description = "Add your description here"
 requires-python = ">=3.11"
 dependencies = [
     "codescan>=0.2.0",
+    "openai>=1.58.1",
     "plotly>=5.24.1",
     "pygments>=2.18.0",
     "radon>=6.0.1",
     "streamlit>=1.41.1",
+    "trafilatura>=2.0.0",
+    "twilio>=9.4.1",
 ]
