--- a/MyApp_code_analysis_20250109_005509.json
+++ b/MyApp_code_analysis_20250109_005509.json
@@ -1,19 +1,24 @@
 {
   "metadata": {
     "application_name": "MyApp",
-    "scan_timestamp": "2025-01-09 00:30:56",
-    "repository_path": "/tmp/tmpe3o_8z13"
+    "scan_timestamp": "2025-01-09 00:55:09",
+    "repository_path": "/tmp/tmpjk1vaxw6"
   },
   "demographic_data": {},
   "integration_patterns": [],
   "summary": {
-    "files_analyzed": 1,
+    "files_analyzed": 2,
     "unique_demographic_fields": [],
     "demographic_fields_found": 0,
     "integration_patterns_found": 0,
     "file_details": [
       {
-        "file_path": "/tmp/tmpe3o_8z13/EmployeeEndpoint.java",
+        "file_path": "/tmp/tmpjk1vaxw6/EmployeeEndpoint.java",
+        "demographic_fields_found": 0,
+        "integration_patterns_found": 0
+      },
+      {
+        "file_path": "/tmp/tmpjk1vaxw6/ApplicationConfiguration.java",
         "demographic_fields_found": 0,
         "integration_patterns_found": 0
       }
