--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,7 +5,11 @@ description = "Add your description here"
 requires-python = ">=3.11"
 dependencies = [
     "codescan>=0.2.0",
+    "openpyxl>=3.1.5",
+    "pandas>=2.2.3",
     "plotly>=5.24.1",
     "pygments>=2.18.0",
+    "rapidfuzz>=3.12.1",
     "streamlit>=1.41.1",
+    "trafilatura>=2.0.0",
 ]
