Agent query: Could you verify that in the Demographic Analysis page: 1. You can upload an Excel file and see it displayed in a compact grid 2. The search interface shows a text input and column dropdown 3. Searching filters the data correctly and shows results in a separate grid?
Implement demographic data analysis feature:  Adds functionality to upload, display, and search an Excel file, displaying results in interactive AgGrid tables.

Screenshot: https://storage.googleapis.com/screenshot-production-us-central1/889c856b-ca52-4062-9701-c73e5c568307/6a129962-4a98-4cd4-8fd8-4edf0454eeb5.jpg

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,7 @@ dependencies = [
     "plotly>=5.24.1",
     "pygments>=2.18.0",
     "rapidfuzz>=3.12.1",
+    "streamlit-aggrid>=1.1.0",
     "streamlit>=1.41.1",
     "trafilatura>=2.0.0",
 ]
