--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,4 +12,5 @@ dependencies = [
     "pygments>=2.18.0",
     "python-levenshtein>=0.26.1",
     "streamlit>=1.41.1",
+    "trafilatura>=2.0.0",
 ]
