--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,13 +5,12 @@ description = "Add your description here"
 requires-python = ">=3.11"
 dependencies = [
     "codescan>=0.2.0",
-    "fuzzywuzzy==0.18.0",
-    "openpyxl==3.1.2",
-    "pandas==2.1.4",
-    "plotly==5.18.0",
-    "pygments==2.18.0",
+    "fuzzywuzzy>=0.18.0",
+    "openpyxl>=3.1.5",
+    "pandas>=2.2.3",
+    "plotly>=5.24.1",
+    "pygments>=2.18.0",
     "python-levenshtein>=0.26.1",
-    "streamlit==1.41.1",
+    "streamlit>=1.41.1",
     "trafilatura>=2.0.0",
-    "twilio>=9.4.5",
 ]
